# kubext

./: .gitignore  .pre-commit-config.yaml  AGENT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
kubectl-export-dotenv/: .env.example  README.md
kubectl-export-dotenv/docs/tapes/: demo.tape
kubectl-export-dotenv/src/export_dotenv/: __main__.py  cli.py  kube.py  utils.py
kubectl-export-dotenv/tests/resources/k8s/: local-cluster.yaml
kubectl-portfwd/: README.md
kubectl-portfwd/docs/: example_config.yaml
kubectl-portfwd/docs/tapes/: demo.tape
kubectl-portfwd/src/portfwd/: __main__.py  cli.py  config.py  error.py  models.py  parser.py  plan.py  runner.py  utils.py
kubectl-portfwd/src/portfwd/kube/: __init__.py  client.py  process.py
kubectl-portfwd/src/portfwd/term/: __init__.py  display.py  prompts.py
kubectl-portfwd/tests/: test_config.py  test_kube.py  test_port_forward.py  test_service_parsing.py
kubek-shared/src/kubek/: __init__.py
kubek-shared/src/kubek/core/: ports.py
kubek-shared/src/kubek/kube/: __init__.py  client.py
kubek-shared/src/kubek/term/: __init__.py  console.py  errors.py  format.py  style.py
scripts/: run-local-cluster.sh
